--- a/vite-project/index.html
+++ b/vite-project/index.html
@@ -1,10 +1,11 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" class="scroll-smooth">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>My Website</title>
+    <title>Tania Boterman</title>
+    <link rel="icon" type="image/x-icon" href="./public/assets/krita_rainbow_fav_gr.png">
   </head>
   <body>
     <div id="root"></div>
