google tags added and thumbnails added

--- a/vite-project/index.html
+++ b/vite-project/index.html
@@ -4,12 +4,45 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tania Boterman</title>
+
+    <!-- Basic SEO -->
+    <title>Tania Boterman – Portfolio</title>
+    <meta
+      name="description"
+      content="Portfolio of Tania Boterman – creative developer & designer. Selected projects: Seedling, Seabody, Kindergalactic."
+    />
+
+    <!-- Open Graph (LinkedIn / Facebook) -->
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Tania Boterman – Portfolio" />
+    <meta
+      property="og:description"
+      content="Creative dev & design projects, case studies, and contact."
+    />
+    <meta property="og:url" content="https://taniaboterman.com/" />
+    <meta
+      property="og:image"
+      content="https://taniaboterman.com/images/share-thumbnail.jpg"
+    />
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Tania Boterman – Portfolio" />
+    <meta
+      name="twitter:description"
+      content="Creative dev & design projects, case studies, and contact."
+    />
+    <meta
+      name="twitter:image"
+      content="https://taniaboterman.com/images/share-thumbnail.png"
+    />
+
     <link
       rel="icon"
       type="image/x-icon"
       href="/images/krita_rainbow_fav_gr.png"
     />
+
     <!-- Google Tag Manager -->
     <script>
       (function (w, d, s, l, i) {
@@ -36,6 +69,7 @@
       ></iframe
     ></noscript>
     <!-- End Google Tag Manager (noscript) -->
+
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
