--- a/vite-project/index.html
+++ b/vite-project/index.html
@@ -17,7 +17,7 @@
     <meta property="og:title" content="Tania Boterman – Portfolio" />
     <meta
       property="og:description"
-      content="Creative dev & design projects, case studies, and contact."
+      content="Creative dev & design portfolio."
     />
     <meta property="og:url" content="https://taniaboterman.com/" />
     <meta
