content copy for og:description adjusted

--- a/vite-project/index.html
+++ b/vite-project/index.html
@@ -9,7 +9,7 @@
     <title>Tania Boterman – Portfolio</title>
     <meta
       name="description"
-      content="Portfolio of Tania Boterman – creative developer & designer. Selected projects: Seedling, Seabody, Kindergalactic."
+      content="Portfolio of Tania Boterman – creative developer & designer. Selected projects: Seedling, DiShi, Seabody, Kindergalactic."
     />
 
     <!-- Open Graph (LinkedIn / Facebook) -->
@@ -30,7 +30,7 @@
     <meta name="twitter:title" content="Tania Boterman – Portfolio" />
     <meta
       name="twitter:description"
-      content="Creative dev & design projects, case studies, and contact."
+      content="Creative dev & design portfolio"
     />
     <meta
       name="twitter:image"
